--- a/render.yaml
+++ b/render.yaml
@@ -15,13 +15,12 @@ services:
         generateValue: true
 
   # Frontend Service
-  - type: web
+  - type: static
     name: constitution-gpt-frontend
     env: static
     buildCommand: npm install && npm run build
-    startCommand: # Static sites don't need a start command
     rootDir: frontend
-    publishDir: dist
+    staticPublishPath: dist
     envVars:
       - key: VITE_API_BASE_URL
         fromService:
