--- a/render.yaml
+++ b/render.yaml
@@ -15,7 +15,7 @@ services:
         generateValue: true
 
   # Frontend Service
-  - type: static
+  - type: web
     name: constitution-gpt-frontend
     env: static
     buildCommand: npm install && npm run build
