--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
