--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,8 @@
   "name": "constitutiongpt",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
+
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -11,8 +13,8 @@
   "dependencies": {
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
