--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,15 @@
+groq
 fastapi
 uvicorn
-pymongo
-openai
 python-dotenv
+openai
+pymongo
 bcrypt
-pyjwt
+PyJWT
+chromadb
+sentence-transformers
+langchain-text-splitters
+python-multipart
+gTTS
+SpeechRecognition
+googletrans-py
